prevent line wrapping inside <code> blocks.
discussed with tj and bentley

--- a/openbsd.css
+++ b/openbsd.css
@@ -5,6 +5,10 @@ body {
 	padding: 0 10px;
 }
 
+code {
+	white-space: nowrap;
+}
+
 @media (min-width: 800px) {
 	body {
 		max-width: 85%;
